Version 1.0.0 (UNRELEASED)
* Add support hopcount match, and implement rfc4890
* Apply nft optimizations
* Use interface ids for faster packet handling, rather than matching on strings

Version 0.99 (2016-01-16)
* Add IPv4 support!
* Added Nat support for ipv4
* Replaced iptables backend with nft backend
* Reduced nuber of keywords
* Added counter target
* Updated Debian package
* Fixes to packet validation rules
* Added true and false conditional rules to ease scripting
* Fixed bug in lowering pass

Version 0.96 (2010-03-12)
* Fix bug in validation rules
* Remove temporary files after applying the firewall
* Optimize chain inlining heuristics

Version 0.95 (2010-03-12)
* Keep firewall secure while applying rules
* Fix rule merging
* Better optimization
* Added .mli files for most modules
* Refactor rule framework to make packet validation easier
* Added TcpFlags for better TCP packet validation

Version 0.9 (2010-02-08)
* Configuration program to auto configure borderline
* Fixes to rule generation.
* Redesign of rules to help setup basic multizoned systems
* Documentation changes
* Minor bugfixes.

Version 0.2 (2009-10-07)
* Fix parser bug.
* Improve rules
* Change Linux backend to match both new and 'stateless' packets for state NEW.

Version 0.1
* Initial release