@@ -17,7 +17,9 @@ define common = {
                      indirect-neighbor-solicit-6,
                      inverse-neighbor-discovery-advertisement-message-6 ];
            hoplimit = 255;
-           destination address = [ ip6_multicast, local ];
+           # The recommendation seems wrong. Lets use any packet with our destination.
+           # These packets cannot be routed previously as the hoplimit is required to be 255
+           # destination address = [ ip6_multicast, local ];
            destination zone = self;
     } policy log_allow;
 
