@@ -23,6 +23,7 @@ let buildin_zones = [ mars ]
 
 type t = {
   interfaces: F.data list;
+  groups: F.data list;
   networks: F.data list;
   vlans: F.data list;
 }
@@ -30,12 +31,13 @@ type t = {
 let init stms =
   let inner acc = function
     | F.Interface ifs -> { acc with interfaces = ifs @ acc.interfaces }
+    | F.If_group groups -> { acc with groups = groups @ acc.groups }
     | F.Network ips -> { acc with networks = ips @ acc.networks }
     | F.Vlan ids -> { acc with vlans = ids @ acc.vlans }
     | F.ZoneRules _ -> acc
     | F.ZoneSnat _ -> acc
   in
-  List.fold_left ~init:{ interfaces = []; networks = []; vlans = [] } ~f:inner stms
+  List.fold_left ~init:{ interfaces = []; groups = []; networks = []; vlans = [] } ~f:inner stms
 
 let rec filter_zonerules table = function
   | F.ZoneRules (t, r, p) :: xs when Poly.((fst t) = (fst table)) -> (r, p) :: filter_zonerules table xs
@@ -77,6 +79,22 @@ let create_zone_chain direction (id, nodes) =
     in
     [ (cond, [], Ir.Jump chain.Ir.id) ]
   in
+  let create_group_rule chain if_groups =
+    let cond = match if_groups with
+      | [] -> []
+      | gs ->
+          let if_groups =
+            List.map ~f:(function
+              | F.Ip (_, pos) -> parse_error ~pos "Expected number, got ip"
+              | F.Number (n, _pos) -> n
+              | F.Id (_, pos) -> parse_error ~pos "Expected number, got id"
+              | F.String (_, pos) -> parse_error ~pos "Expected number, got string"
+            ) gs
+          in
+          [(Ir.If_group(direction, Set.Poly.of_list if_groups), false)]
+    in
+    [ (cond, [], Ir.Jump chain.Ir.id) ]
+  in
   let create_vlan_rule chain vlans =
     let cond = match vlans with
       | [] -> []
@@ -92,11 +110,12 @@ let create_zone_chain direction (id, nodes) =
     in
     [ (cond, [], Ir.Jump chain.Ir.id) ]
   in
-  let zone = init nodes in
+  let { networks; interfaces; groups; vlans; } = init nodes in
   Chain.create [([], [Ir.MarkZone(direction, id)], Ir.Pass)] ("Mark zone " ^ id)
-  |> (fun c -> Chain.create (create_network_rules c zone.networks) ("Match networks for zone " ^ id))
-  |> (fun c -> Chain.create (create_interface_rule c zone.interfaces) ("Match interfaces for zone " ^ id))
-  |> (fun c -> Chain.create (create_vlan_rule c zone.vlans) ("Match vlans for zone " ^ id))
+  |> (fun c -> Chain.create (create_network_rules c networks) ("Match networks for zone " ^ id))
+  |> (fun c -> Chain.create (create_interface_rule c interfaces) ("Match interfaces for zone " ^ id))
+  |> (fun c -> Chain.create (create_vlan_rule c vlans) ("Match vlans for zone " ^ id))
+  |> (fun c -> Chain.create (create_group_rule c groups) ("Match vlans for zone " ^ id))
 
 
 let rec filter = function
@@ -145,6 +164,7 @@ let emit_nat (zones : (string * F.zone_stm list) list) : Ir.oper list =
          [Ir.Snat (Ipaddr.V4.Prefix.network ip)],
          Ir.Pass) |> Option.some
     | F.Interface _
+    | F.If_group _
     | F.Network _
     | F.Vlan _
     | F.ZoneRules _ -> None
